--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,168 +1,259 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
-/* font-family: 'Roboto Slab', serif; */
-*{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none; 
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap");
+:root{
+  --letra: 'Roboto Slab', serif; 
 }
-a{
-  color:black;
-}
-html{
-  background-color: rgb(234, 234, 234);
-}
-main{
-  background-color: lightgray;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 body {
-	font-family: Arial, sans-serif;
-  min-width: 420px;  
-  max-width: 1200px; 
-  margin:0 auto;
+  font-family: var(--letra);
+  min-width: 420px;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: rgba(245, 208, 63,0.2);
 }
 header {
-	background-color: #f5d03f ;
+  background-color: #f5d03f;
 }
-.logo-h1{
-  display:flex;
+.logo-h1 {
+  display: flex;
   align-items: center;
-  font-family: 'Roboto Slab', serif;
+  margin-left:35px;
 }
-.logo-h1 img{
-  width:110px;
-  height:110px;
-  padding:15px;
+.logo-h1 img {
+  width: 110px;
+  height: 110px;
+  padding: 15px;
 }
-
+.logo-h1 h1{
+  margin-left:35px;
+}
 /* DROPDOWN */
 .navbar ul {
-  background-color: #000;
+  background-color: #333;
   display: flex;
 }
-.navbar ul li a{
-  color:#d8d5d5;
+.navbar ul li a {
+  color: #ebebeb;
 }
-  .navbar a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  .dropdown ul {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    background-color: rgb(171, 169, 169);
-    
-  }
-  .dropdown:hover ul {
-    display: block;
-  }
-  .dropdown ul li a:hover{
-    background-color: rgba(255, 255, 224,0.5); 
-    color:#000;
-  }
-  .dropdown li {
-    width: 6em;
-  }  
-  /* FIN DROPDOWN */
-.contenedor{
-  display:flex;
-  flex-direction: column;
+.navbar a {
+  display: block;
+  padding: 10px 16px;
+}
+.dropdown ul li:not(:last-child)::after{
+  content: "--------";
+}
+.dropdown ul {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: rgb(235, 235, 235);  
+  border-radius: 10px;
+}
+.dropdown ul li a{
+  color:#1e1e1e;
+}
+.dropdown:hover ul {
+  display: block;
+}
+.dropdown ul li a:hover {
+  background-color: rgba(255, 255, 224, 0.5);
+  color: #000;
+  font-size: 17px;
+}
+.dropdown li {
+  width:105px;
+  text-align: center;
+}
+
+/* MAIN */
+#contenedor{
+  display:block;
+}
+.container {
+  padding: 15px;
+  border: 1px solid #000;
+  background-color: rgba(245, 208, 63,0.2);
+}
+.container .centro {
+  background-color: white;
+  border: 1px solid #000;
+  padding:0;
+  border-radius: 3px;
+  padding:15px;
+}
+#formulario .centro{
+  padding-top:25px;
+}
+.container h3 {
+  margin: 10px 5px;
+  font-size: 800;
+}
+.container .abrirNuevo {
+  width: 5em;
+  height: 5em;
+  border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  margin-left:5px;
+}
+.container .btn-1 {
+  width: 20px;
+  height: 20px;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+#guardada {
+  display: flex;
+  flex-wrap: wrap;
+  gap:15px;
+  justify-content: space-evenly;
+}
+#guardada div {
+  border: 1px solid #000;
+  width: 180px;
+  height: 180px;
+  border-radius: 5px;
+  padding: 10px;
+}
+#guardada div p:nth-child(1) {
+  font-size: 20px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+}
+#guardada div p {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+#formulario {
+  display: none;
+}
+input {
+  background-color: none;
+  width: 100%;
+  height: 4vh;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: capitalize;
+  outline: none;
+}
+input::placeholder{
+  font-size: 19px;  
+}
+textarea::placeholder{
+  font-size: 18px;
+}
+input::placeholder {
+  text-transform: uppercase;
+  color:#000;
+}
+textarea,
+input {
+ padding: 12px;
+}
+textarea {
+  height:490px;
+  resize: none;
+  width: 100%;
+  outline: none;
+  font-size: 16px;
+}
+.reset,
+.guardar {
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  background-color: #4caf50;
+  color: #fff;
+  cursor: pointer;
+  margin: 10px;
+}
+button[type="reset"] {
+  background-color: #f44336;
+}
+.guardar:hover {
+  background-color: #3e8e41;
+}
+.reset:hover {
+  background-color: #cd3a2f;
+}
+.botones-flex {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/*FOOTER*/
+.footer{
+  background: black;
+  text-align: center; 
+  padding:10px;
+}
+
+.footer h3{
+  color: #ffffff;
+  font-size: 14px;
+}
+
+.footer p{
+  color: #ffffff;
+  font-size: 15px;
+}
+
+.icon-footer{
+  display: flex;
   justify-content: center;
   align-items: center;
 }
-.contenedor h3{
-  margin:25px 0;
-  font-size: 800;
-  font-family: 'Roboto Slab', serif;
-  
-}
-.contenedor .recuadro{
-    width:10em;
-    height:10em;
-    border:1px solid #000;
-    display:flex;
-    justify-content: center;
-    align-items: center; 
-    background-color: #d8d5d5; 
-    border-radius: 5px;
-    margin-bottom: 30px;
-  }
-.contenedor button{
-  width:40px;
-  height:40px;
-  font-size: 2.5em;
+
+.fa-brands{
+  font-size: 16px; 
+  margin: 10px;
+  background: #fff;
+  width: 25px;
+  height: 25px;
   display: flex;
   justify-content: center;
-  align-items: center; 
-  cursor: pointer;
-}
-.guardada{
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(5,1fr);
-  margin-bottom: 30px;
-
-
-}
-.guardada .recuadro1{
-  border:1px solid #000;
-  width:200px;
-  height:10em;
-  background-color: #d8d5d5;
-  border-radius: 5px;
-  padding:10px;
-}
-.recuadro1 p{
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden; 
-}
-.formulario{
-  display:none;
-}
-input{
-    width:100%;
-    height: 6vh;
-    border:0;
-}
-input[type="text"]:focus
- {
-    border: 1px solid lightyellow;
-    outline: none;
-}
-input::placeholder,
-textarea::placeholder{
-    font-weight: bold;
-    font-size: 1.2em;    
-}
-   
-input::placeholder{
-text-transform: uppercase;
-}
-textarea,
-input{
-    text-indent: 1em;
-}
-textarea {
-	background-color: #fff;
-	border: none;
-	box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    height: 75vh;
-	resize: none;
-	width: 100%;
-    padding-top:1em;
-    outline: none;
+  align-items: center;
+  border-radius: 100%;
 }
 
-footer {
-	background-color: #333;
-	color: #fff;
-    padding:3em;
-	text-align: center;
+.fa-instagram{
+  background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
+  color: #ffffff;
 }
-  
+
+.fa-instagram:hover{
+  color: black;
+}
+
+.fa-facebook{
+  color: #1E4595;
+}
+
+.fa-facebook:hover{
+  background: #1E4595;
+  color: #ffffff;
+}
+
+.fa-twitter:hover{
+  background: linear-gradient(to right top, #42a9ec, #358de6);
+  color: #ffffff;
+}
+
+.fa-twitter{
+  color: #358de6;
+  background-color: #ffffff;
+}
