--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,8 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   background-color: rgba(245, 208, 63,0.2);
+
+/* HEADER */
 }
 header {
   background-color: #f5d03f;
@@ -29,9 +31,7 @@ header {
   height: 110px;
   padding: 15px;
 }
-.logo-h1 h1{
-  margin-left:35px;
-}
+
 /* DROPDOWN */
 .navbar ul {
   background-color: #333;
@@ -104,9 +104,6 @@ header {
   border-radius: 3px;
   padding:15px;
 }
-#formulario .centro{
-  padding-top:25px;
-}
 .container h3 {
   margin: 10px 5px;
   font-size: 800;
@@ -122,7 +119,7 @@ header {
   margin-bottom: 30px;
   margin-left:5px;
 }
-.container .btn-1 {
+.btn-1 {
   width: 20px;
   height: 20px;
   font-size: 1.5em;
@@ -154,8 +151,13 @@ header {
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
+/* FORMULARIO */
 #formulario {
   display: none;
+}
+#formulario .centro{
+  padding-top:25px;
 }
 input {
   background-color: none;
@@ -214,6 +216,34 @@ button[type="reset"] {
   justify-content: space-evenly;
 }
 
+/* PREGUNTAS FRECUENTES */
+.faq h2 {
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.faq li{
+  list-style-type: square;
+}
+.faq h3 {
+  font-size: 24px;
+  margin-top: 40px;
+}
+
+.faq ol {
+  margin-left: 40px;
+}
+
+.faq p {
+  margin-bottom: 20px;
+  text-indent: 1rem;
+}
+
+.home{
+  margin:20px 5px;
+  font-size: 35px;
+  color:black;
+}
 /*FOOTER*/
 .footer{
   background: black;
