--- a/views/preguntas.html
+++ b/views/preguntas.html
@@ -10,6 +10,7 @@
     <title>Preguntas Frecuentes</title>
 </head>
 <body>
+  <!-- como hacer un index -->
     <header>
         <div class="logo-h1">
           <img src="/img/logo-PhotoRoom.png-PhotoRoom.png" alt="Logo">
