--- a/views/preguntas.html
+++ b/views/preguntas.html
@@ -37,8 +37,8 @@
       </header>
       
     <div class="faq container">
-        <a href="/" class="btn-1 home">
-            <i class="fas fa-home"></i>
+        <a href="/" class="volver">
+            <i class="fas fa-home fa-2x"></i>
         </a>
         <div class="centro">
           <h2>Preguntas Frecuentes</h2>
@@ -67,10 +67,22 @@
   <footer class="footer">
     <h3>Sigueme en Redes Sociales</h3>
     <div class="icon-footer">
-      <a href="http://www.instagram.com/jesuslotito" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="http://www.facebook.com/jesus.dominguez.5439" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-      <a href="http://www.twitter.com/dominguezj21" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+      <div class="sigueme">
+        <p>instagram</p>
+        <a href="http://www.instagram.com/jesuslotito" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+      <div class="sigueme">
+        <p>facebook</p>
+        <a href="http://www.facebook.com/jesus.dominguez.5439" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      </div>
+      <div class="sigueme">
+        <p>twitter</p>
+        <a href="http://www.twitter.com/dominguezj21" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+      </div>
+     <div class="sigueme">
+      <p>github</p> 
       <a href="http://www.github.com/lotito30" target="_blank"><i class="fa-brands fa-github"></i></a>
+     </div>
     </div>
     <p>Lotito30 © 2023. Todos los derechos reservados</p>
   </footer>
