--- a/views/index.html
+++ b/views/index.html
@@ -29,11 +29,16 @@
             <li><a href="#">Fondo</a></li>
           </ul>
         </li>
+
         <li class="dropdown">
           <a href="#" class="navbar-content">Ayuda</a>
           <ul>
             <li><a href="/preguntas">Preguntas Frecuentes</a></li>
           </ul>
+        </li>
+        
+        <li>
+          <a href="/inicioSesion" class="navbar-content">Iniciar Sesión</a>
         </li>
       </ul>
     </nav>
@@ -59,8 +64,8 @@
 <!-- FORMULARIO -->
 <section id="formulario" class="container"> 
   <div class="titulo">
-    <a href="/" class="btn-1 home">
-      <i class="fas fa-home"></i>
+    <a href="/" class="volver">
+      <i class="fas fa-home fa-2x"></i>
       </a>
       <span id="mensaje"></span>
   </div>
@@ -68,7 +73,7 @@
     <form method="" onsubmit="return guardar()" >
       <input autofocus type="text" placeholder="Titulo" id="titulo"/>
       <textarea placeholder="Ingresa tu mensaje" id="textarea" ></textarea>
-      <button class="guardar" type="submit" value="Guardar">Guardar</button>
+      <button class="submit" type="submit" value="guardar"><i class="fas fa-save"></i> Guardar</button>
     </form>
   </div>
 </section>
@@ -76,10 +81,22 @@
   <footer class="footer">
     <h3>Sigueme en Redes Sociales</h3>
     <div class="icon-footer">
-      <a href="http://www.instagram.com/jesuslotito" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="http://www.facebook.com/jesus.dominguez.5439" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-      <a href="http://www.twitter.com/dominguezj21" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+      <div class="sigueme">
+        <p>instagram</p>
+        <a href="http://www.instagram.com/jesuslotito" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+      <div class="sigueme">
+        <p>facebook</p>
+        <a href="http://www.facebook.com/jesus.dominguez.5439" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      </div>
+      <div class="sigueme">
+        <p>twitter</p>
+        <a href="http://www.twitter.com/dominguezj21" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+      </div>
+     <div class="sigueme">
+      <p>github</p> 
       <a href="http://www.github.com/lotito30" target="_blank"><i class="fa-brands fa-github"></i></a>
+     </div>
     </div>
     <p>Lotito30 © 2023. Todos los derechos reservados</p>
   </footer>
