actualizar footer, volver clase 07_06

--- a/views/index.html
+++ b/views/index.html
@@ -69,8 +69,9 @@
       </a>
       <span id="mensaje"></span>
   </div>
-  <div class="centro">
+  <div class="centro centroForm">
     <form method="" onsubmit="return guardar()" >
+      
       <input autofocus type="text" placeholder="Titulo" id="titulo"/>
       <textarea placeholder="Ingresa tu mensaje" id="textarea" ></textarea>
       <button class="submit" type="submit" value="guardar"><i class="fas fa-save"></i> Guardar</button>
