--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,6 @@ body {
   min-width: 420px;
   max-width: 1200px;
   margin: 0 auto;
-  background-color: rgba(245, 208, 63,0.2);
   background: url("/img/fondohtml.jfif");
 
 /* HEADER */
@@ -104,6 +103,7 @@ header {
   align-items: center;
   justify-content: center;
 }
+
 .volver{
   position: absolute;
   top: 1%;
@@ -195,6 +195,9 @@ form{
   top: 50%;
   right: 0;
   font-size: 1.2rem;
+}
+.centroForm{
+  margin-top: 4rem;
 }
 form button{
   color: white;  
@@ -294,8 +297,9 @@ form .reset:hover{
   display:block;
 }
 .container {
-  padding: 15px;
-  border: 1px solid #000;
+  position: relative;
+  padding: 1rem;
+  border: .1rem solid #000;
   background-color: #ebebeb;
 
 }
@@ -417,30 +421,31 @@ textarea {
 .footer{
   background: black;
   text-align: center; 
-  padding:10px;
+  padding:.8rem;
 }
 
 .footer h3{
   color: #ffffff;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .footer p{
   color: #ffffff;
-  font-size: 15px;
+  font-size: 1rem;
 }
 
 .icon-footer{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   margin: 1rem 0;
 }
 .sigueme{
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+  justify-content: center;
   text-transform: capitalize;
   background-color: #fff;
   border-radius:.5rem;
@@ -454,8 +459,8 @@ textarea {
 
 .fa-brands{
   font-size: 1rem; 
-  width: 25px;
-  height: 25px;
+  width: 1.5rem;
+  height: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -489,4 +494,13 @@ textarea {
 .fa-instagram:hover{
   color:#000;
 
+}
+
+@media(max-width:520px){
+  .icon-footer{
+    width: 50%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin: 1rem auto;
+  }
 }
