--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 :root{
   --letra: 'Roboto Slab', serif; 
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -21,12 +22,17 @@ body {
 }
 header {
   background-color: #f5d03f;
+  position: fixed;
+  top: 0; right: 0; left: 0;
+  z-index: 1;
+  max-width: 1200px;
+  margin: 0 auto ;
 }
 .logo-h1 {
   display: flex;
   align-items: center;
   margin-left:35px;
-  text-shadow: 5px 3px .3rem #222222;
+  text-shadow: 0 2px .3rem #222222;
 }
 .logo-h1 img {
   width: 110px;
@@ -35,37 +41,35 @@ header {
 }
 
 /* DROPDOWN */
-.navbar ul {
+.navbar{
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+.navbar .principalUl{
   background-color: #333;
   display: flex;
+  width: 100%;
 }
-.navbar ul li a {
+
+.navbar a {
   color: #ebebeb;
 }
-.navbar a {
-  display: block;
-  padding: 10px 16px;
-  position: relative;
+.navbar ul li{
+  padding: 10px 0;
+  margin-left: .5rem;
+  cursor: pointer;
 }
-.navbar .navbar-content::after{
-  content: "";
-  position: absolute;
-  left:15px;
-  bottom:4px;
-  width:60%;
-  height:3px;
-  background-color: #fff;
-  border-radius: 5px;
-  transform: scaleX(0);
-  transition: .5s;
-  transform-origin: left;
+.navbar .navbar-content a{
+  border: .2rem solid transparent;
+  border-radius: .3rem;
+  padding: .2rem;
 }
-.navbar .navbar-content:hover::after{
-  transform: scaleX(1);
+.navbar .navbar-content a:hover{
+  border-color: #666;
 }
-.dropdown ul li{
-  width:100%;
-  border-bottom: 1px solid #000;
+.dropdown ul li:not(:last-child){
+  border-bottom: .1rem solid #000;
 }
 .dropdown ul {
   display: none;
@@ -74,52 +78,91 @@ header {
   background-color: rgb(235, 235, 235);  
   border-radius: 10px;
 }
-.dropdown ul li a{
+.dropdown ul li{
   color:#1e1e1e;
-}
-.dropdown:hover ul {
-  display: block;
-}
-.dropdown ul li a:hover {
-  background-color: rgba(255, 255, 224, 0.5);
-  color: #000;
-  font-size: 17px;
-}
-.dropdown li {
-  width:105px;
+  padding: .5rem;
+  margin: 0;
   text-align: center;
 }
+.dropdown:hover ul:not(.editarBorrar){
+  display: block;
+  margin-top: .5rem;
+}
+.editar-content:hover{
+  text-shadow: 1px 1px 0.2rem #989898;
+}
+.editarBorrar{
+  display: none;
+}
+
+.principalColores{
+  display: flex;
+  position: absolute;
+  right: 5%;
+  top: 10%;
+  gap: 1rem;
+}
+.contenedorColor{
+  padding: 1rem;
+  border-radius: 100%;
+  border: .1rem solid #fff;
+  cursor: pointer;
+}
+.contenedorColor:hover{
+  transform: scale(1.08);
+}
+.yellow{
+  background-color: yellow;
+}
+.red{
+  background-color: red;
+}
+.blue{
+  background-color: blue;
+}
+.white{
+  background-color: #ebebeb;
+}
+
 
 /* incio de sesion */
-
+.conteinerInicioSesion{
+  background-color: #fff;
+}
 #registrarse,
 #recuperarContrasena{
   display: none;
 }
 
-.conteiner{
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .volver{
   position: absolute;
-  top: 1%;
+  top: 11%;
   left: 1%;
-  background-color: #000;
   padding: 1rem;
   border-radius: 50%;
 }
+.inicio{
+  top:19%;
+  left: 0;
+}
+.preguntas{
+  top:15%;
+}
 .volver i{
-  color: rgb(255, 255, 255);
+  color: #000
 }
 .volver:hover i{
-  color:#000;
+  color:#fff;
 }
 .volver:hover{
-  background-color: #fff;
+  background-color: #000;
+}
+.conteiner{
+  height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: end;
 }
 .conteinerContent{
   background-color: rgb(70, 70, 70);
@@ -129,8 +172,8 @@ header {
   font-weight: 600;
   text-align: center;
   width: 450px;
-  padding: 50px;
   color: #fff;
+  margin-bottom: 2rem;
 }
 
 .conteinerContent h1{
@@ -199,6 +242,9 @@ form{
 .centroForm{
   margin-top: 4rem;
 }
+.centroForm .submit i{
+  margin-right: .5rem;
+}
 form button{
   color: white;  
   padding: .5rem;
@@ -223,6 +269,7 @@ form .reset{
 form .reset:hover{
   background-color: rgb(218, 2, 2);
 }
+
 .recuerdame{
   display: flex;
   align-items: center;
@@ -292,10 +339,9 @@ form .reset:hover{
 }
 
 /* fin incio de sesion */
+
 /* MAIN */
-#contenedor{
-  display:block;
-}
+
 .container {
   position: relative;
   padding: 1rem;
@@ -303,37 +349,39 @@ form .reset:hover{
   background-color: #ebebeb;
 
 }
-.container .centro {
+.centro {
   background-color: white;
   border: 1px solid #000;
-  padding:0;
   border-radius: 3px;
   padding:15px;
+  position: relative;
+  height: auto;
+}
+.container .index{
+  height: 100vh;
 }
 .container h3 {
-  margin: 10px 5px;
+  margin: 10rem 0 0 2rem;
   font-size: 800;
 }
-.container .abrirNuevo {
-  width: 5em;
-  height: 5em;
-  border: 1px solid #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  margin-bottom: 30px;
-  margin-left:5px;
-}
+
 .btn-1 {
-  width: 20px;
-  height: 20px;
-  font-size: 1.5em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  bottom: 10%; right: 10%;
+  padding: 1.5rem;
   cursor: pointer;
+  border: none;
+  border-radius: 25%;
+  background:radial-gradient(circle at center, #fff 2%, rgb(243, 232, 42));
+  margin-bottom: 1rem;
+  box-shadow: 0 0 .5rem #666;
+  z-index: 1;
 }
+.btn-1:hover{
+  transform: scale(1.05);
+}
+
+/* DIV de NOTAS  */
 #guardada {
   display: flex;
   flex-wrap: wrap;
@@ -345,23 +393,34 @@ form .reset:hover{
   width: 150px;
   height: 150px;
   border-radius: 5px;
-  padding: 10px;
-  margin-top:5px;
+  padding: 1rem;
+  margin-top:1rem;
+  cursor: pointer;
 }
-#guardada div p:nth-child(1) {
-  font-size: 20px;
-  margin-bottom: 10px;
+#guardada div h2,
+#guardada div p{
+  margin-top: .5rem;
   text-transform: capitalize;
-}
-#guardada div p {
   text-overflow: ellipsis;
   overflow: hidden;
+  color: #666;
+}
+.abrirNuevo{
+  box-shadow: 1px 2px .2rem #666;
+  position: relative;
+  
+}
+.abrirNuevo h2{
+  color: white;
+}
+.abrirNuevo:hover{
+  transform: scale(1.05);
+}
+.abrirNuevo:hover .editarBorrar{
+  display: initial;
 }
 
 /* FORMULARIO */
-#formulario {
-  display: none;
-}
 #formulario .titulo{
   display: flex;
   gap: 5rem;
@@ -371,12 +430,9 @@ form .reset:hover{
   font-size: 1.5rem;
   font-weight: 500;
 }
-#formulario .centro{
-  padding-top:25px;
-}
 
 input::placeholder{
-  font-size: 19px;  
+  font-size: 18px;  
 }
 textarea::placeholder{
   font-size: 18px;
@@ -385,23 +441,32 @@ input::placeholder {
   text-transform: uppercase;
   color:#000;
 }
-textarea,
-input {
- padding: 12px;
+#formulario input {
+  padding: .2rem;
+  font-size: 2rem;
 }
-textarea {
-  height:490px;
+#formulario textarea {
+  padding: .2rem;
+  height: 350px;
   resize: none;
-  width: 100%;
   outline: none;
-  font-size: 16px;
+  font-size: 1.5rem;
+}
+
+#formulario form{
+  width: 50%;
+  margin: 8rem auto;
 }
 
 /* PREGUNTAS FRECUENTES */
+.faq{
+  color: #666;
+}
 .faq h2 {
   font-size: 32px;
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 11rem;
 }
 .faq li{
   list-style-type: square;
@@ -414,8 +479,6 @@ textarea {
 .faq ol {
   margin-left: 40px;
 }
-
-
 
 /*FOOTER*/
 .footer{
