--- a/views/nota.ejs
+++ b/views/nota.ejs
@@ -10,7 +10,7 @@
           <h3>Fijadas</h3>
           <div id="guardada">
 
-           <%- include('./partials/notas') %>
+           <%- include('./partials/cicloForNotas') %>
 
           <a href="/notas/formularioNota"><button class="btn-1"><i class="fas fa-pencil fa-2x"></i></button></a>
           </div>
