--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,11 +1,13 @@
 <head>
-    <meta charset="UTF-8" />
-    <title><%= title %></title>
-    <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/a42b43434c.js" crossorigin="anonymous"></script>
-    <!-- CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
-    <!-- JAVASCRIPT -->
-    <script src="/js/function.js"></script>
+  <meta charset="UTF-8" />
+  <title><%= title %></title>
+  <!-- fontawesome -->
+  <script
+    src="https://kit.fontawesome.com/a42b43434c.js"
+    crossorigin="anonymous"
+  ></script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="/css/style.css" />
+  <!-- JAVASCRIPT -->
+  <script src="/js/function.js"></script>
 </head>
-
