--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap");
-:root{
-  --letra: 'Roboto Slab', serif; 
+:root {
+  --letra: "Roboto Slab", serif;
 }
 
 * {
@@ -18,21 +18,23 @@ body {
   margin: 0 auto;
   background: url("/img/fondohtml.jfif");
 
-/* HEADER */
+  /* HEADER */
 }
 header {
   background-color: #f5d03f;
   position: fixed;
-  top: 0; right: 0; left: 0;
+  top: 0;
+  right: 0;
+  left: 0;
   z-index: 1;
   max-width: 1200px;
-  margin: 0 auto ;
+  margin: 0 auto;
 }
 .logo-h1 {
   display: flex;
   align-items: center;
-  margin-left:35px;
-  text-shadow: 0 2px .3rem #222222;
+  margin-left: 35px;
+  text-shadow: 0 2px 0.3rem #222222;
 }
 .logo-h1 img {
   width: 110px;
@@ -41,12 +43,12 @@ header {
 }
 
 /* DROPDOWN */
-.navbar{
+.navbar {
   display: flex;
   position: relative;
   width: 100%;
 }
-.navbar .principalUl{
+.navbar .principalUl {
   background-color: #333;
   display: flex;
   width: 100%;
@@ -55,143 +57,142 @@ header {
 .navbar a {
   color: #ebebeb;
 }
-.navbar ul li{
+.navbar ul li {
   padding: 10px 0;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   cursor: pointer;
 }
-.navbar .navbar-content a{
-  border: .2rem solid transparent;
-  border-radius: .3rem;
-  padding: .2rem;
+.navbar .navbar-content a {
+  border: 0.2rem solid transparent;
+  border-radius: 0.3rem;
+  padding: 0.2rem;
 }
-.navbar .navbar-content a:hover{
+.navbar .navbar-content a:hover {
   border-color: #666;
 }
-.dropdown ul li:not(:last-child){
-  border-bottom: .1rem solid #000;
+.dropdown ul li:not(:last-child) {
+  border-bottom: 0.1rem solid #000;
 }
 .dropdown ul {
   display: none;
   position: absolute;
   z-index: 1;
-  background-color: rgb(235, 235, 235);  
+  background-color: rgb(235, 235, 235);
   border-radius: 10px;
 }
-.dropdown ul li{
-  color:#1e1e1e;
-  padding: .5rem;
+.dropdown ul li {
+  color: #1e1e1e;
+  padding: 0.5rem;
   margin: 0;
   text-align: center;
 }
-.dropdown:hover ul:not(.editarBorrar){
+.dropdown:hover ul:not(.editarBorrar) {
   display: block;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
-.editar-content:hover{
+.editar-content:hover {
   text-shadow: 1px 1px 0.2rem #989898;
 }
-.editarBorrar{
+.editarBorrar {
   display: none;
 }
 
-.principalColores{
+.principalColores {
   display: flex;
   position: absolute;
   right: 5%;
   top: 10%;
   gap: 1rem;
 }
-.contenedorColor{
+.contenedorColor {
   padding: 1rem;
   border-radius: 100%;
-  border: .1rem solid #fff;
+  border: 0.1rem solid #fff;
   cursor: pointer;
 }
-.contenedorColor:hover{
+.contenedorColor:hover {
   transform: scale(1.08);
 }
-.yellow{
+.yellow {
   background-color: yellow;
 }
-.red{
+.red {
   background-color: red;
 }
-.blue{
+.blue {
   background-color: blue;
 }
-.white{
+.white {
   background-color: #ebebeb;
 }
 
-
 /* incio de sesion */
-.conteinerInicioSesion{
+.conteinerInicioSesion {
   background-color: #fff;
 }
 #registrarse,
-#recuperarContrasena{
+#recuperarContrasena {
   display: none;
 }
 
-.volver{
+.volver {
   position: absolute;
-  top: 11%;
+  top: 10rem;
   left: 1%;
   padding: 1rem;
   border-radius: 50%;
 }
-.inicio{
-  top:19%;
-  left: 0;
+.detalle{
+  top:1rem;
 }
-.preguntas{
-  top:15%;
+.formulario{
+  top:5rem;
 }
-.volver i{
-  color: #000
+.volver i {
+  color: #000;
 }
-.volver:hover i{
-  color:#fff;
+.volver:hover i {
+  color: #fff;
 }
-.volver:hover{
+.volver:hover {
   background-color: #000;
 }
-.conteiner{
+.conteiner {
   height: 100vh;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: end;
 }
-.conteinerContent{
+.conteinerContent {
   background-color: rgb(70, 70, 70);
-  border: .1rem solid #fff;
-  border-radius: .5rem;
+  border: 0.1rem solid #fff;
+  border-radius: 0.5rem;
   padding: 1rem 2rem 1rem 2rem;
   font-weight: 600;
   text-align: center;
   width: 450px;
   color: #fff;
   margin-bottom: 2rem;
+  transform: scale(0.8);
 }
 
-.conteinerContent h1{
+.conteinerContent h1 {
   font-size: 2.5rem;
   margin-bottom: 2rem;
   color: #fff;
 }
-.contenidoinicioSesion{
+.contenidoinicioSesion {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
 }
 
-form{
+form {
   display: flex;
   flex-direction: column;
   line-height: 1;
 }
-.absolute{
+.absolute {
   width: 100%;
   height: 50px;
   position: relative;
@@ -201,139 +202,139 @@ form{
   margin: 0 auto;
 }
 
-.absolute label{
+.absolute label {
   position: absolute;
   top: 50%;
   pointer-events: none;
   font-weight: 500;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   font-size: 1.1rem;
-  transition: .5s;
+  transition: 0.5s;
   color: #ababab;
 }
 
 .absolute input:focus + label,
-.absolute label.active{
-  top:3px;
+.absolute label.active {
+  top: 3px;
   font-weight: bold;
 }
 
-.absolute input{
+.absolute input {
   width: 95%;
   height: 20px;
   position: absolute;
   background: transparent;
   border: none;
   outline: none;
-  top:50%;
-  padding: 0 .5rem;
+  top: 50%;
+  padding: 0 0.5rem;
   font-size: 1.2rem;
   color: #fff;
 }
-.absolute input::placeholder{
+.absolute input::placeholder {
   color: #fff;
 }
-.absolute span i{
+.absolute span i {
   position: absolute;
   top: 50%;
   right: 0;
   font-size: 1.2rem;
 }
-.centroForm{
+.centroForm {
   margin-top: 4rem;
 }
-.centroForm .submit i{
-  margin-right: .5rem;
+.centroForm .submit i {
+  margin-right: 0.5rem;
 }
-form button{
-  color: white;  
-  padding: .5rem;
+form button {
+  color: white;
+  padding: 0.5rem;
   margin: 0 auto;
   width: 50%;
   margin-top: 1rem;
   font-size: medium;
   cursor: pointer;
-  border-radius: .5rem;
-  box-shadow: 0 0 .5rem #666;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 0.5rem #666;
 }
 
-form .submit{
+form .submit {
   background-color: rgb(7, 168, 130);
 }
-form .submit:hover{
+form .submit:hover {
   background-color: rgb(4, 180, 138);
 }
-form .reset{
+form .reset {
   background-color: rgb(187, 2, 2);
 }
-form .reset:hover{
+form .reset:hover {
   background-color: rgb(218, 2, 2);
 }
 
-.recuerdame{
+.recuerdame {
   display: flex;
   align-items: center;
   justify-content: start;
-  gap: .5rem;
-  margin: .5rem 0;
-  }
-
-.contenidoinicioSesion p{
-  text-align: center;
-  margin-top: .5rem;
-  font-size: .9rem;
+  gap: 0.5rem;
+  margin: 0.5rem 0;
 }
-.contenidoinicioSesion a{
+
+.contenidoinicioSesion p {
+  text-align: center;
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+}
+.contenidoinicioSesion a {
   text-decoration: none;
   color: rgb(242, 255, 0);
   font-weight: 700;
   margin-left: 3px;
   text-transform: capitalize;
 }
-.contenidoinicioSesion a:hover{
+.contenidoinicioSesion a:hover {
   color: rgb(212, 198, 0);
 }
 
-.btn-redSocial{
+.btn-redSocial {
   display: flex;
   flex-direction: column;
   margin: 1rem auto;
   width: 100%;
-  gap: .5rem;
+  gap: 0.5rem;
 }
-.btn-redSocial div{
+.btn-redSocial div {
   height: 2.5rem;
   text-align: center;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
   background-color: #ffffff;
-  padding: .5rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
 }
-.btn-redSocial div:hover{
+.btn-redSocial div:hover {
   background-color: #eeebeb;
 }
-.btn-redSocial div span{
-  color:black;
+.btn-redSocial div span {
+  color: black;
 }
-.btn-redSocial .google img{
+.btn-redSocial .google img {
   width: 35px;
   margin-left: -15px;
 }
 
-.btn-redSocial .fb img{
+.btn-redSocial .fb img {
   width: 35px;
 }
-#recuperarContrasena .conteinerContent{
+#recuperarContrasena .conteinerContent {
   width: 600px;
-  padding: 50px; 
+  padding: 50px;
 }
-#recuperarContrasena h3{
+#recuperarContrasena h3 {
   margin-top: 1rem;
 }
-#recuperarContrasena form{
+#recuperarContrasena form {
   margin: 0 auto;
   width: 90%;
 }
@@ -345,19 +346,28 @@ form .reset:hover{
 .container {
   position: relative;
   padding: 1rem;
-  border: .1rem solid #000;
+  border: 0.1rem solid #000;
   background-color: #ebebeb;
-
 }
 .centro {
   background-color: white;
   border: 1px solid #000;
   border-radius: 3px;
-  padding:15px;
+  padding: 15px;
   position: relative;
   height: auto;
 }
-.container .index{
+.centro .detalle,
+.centro .detalle {
+  text-align: center;
+}
+.centro .detalle{
+  margin-bottom: 2rem;
+}
+.centro .detalle{
+  margin-top: 2rem;
+}
+.container .index {
   height: 100vh;
 }
 .container h3 {
@@ -367,17 +377,18 @@ form .reset:hover{
 
 .btn-1 {
   position: absolute;
-  bottom: 10%; right: 10%;
+  bottom: 10%;
+  right: 10%;
   padding: 1.5rem;
   cursor: pointer;
   border: none;
   border-radius: 25%;
-  background:radial-gradient(circle at center, #fff 2%, rgb(243, 232, 42));
+  background: radial-gradient(circle at center, #fff 2%, rgb(243, 232, 42));
   margin-bottom: 1rem;
-  box-shadow: 0 0 .5rem #666;
+  box-shadow: 0 0 0.5rem #666;
   z-index: 1;
 }
-.btn-1:hover{
+.btn-1:hover {
   transform: scale(1.05);
 }
 
@@ -385,8 +396,8 @@ form .reset:hover{
 #guardada {
   display: flex;
   flex-wrap: wrap;
-  gap:15px;
-  justify-content: space-evenly;
+  gap: 15px;
+  justify-content: center;
 }
 #guardada div {
   border: 1px solid #000;
@@ -394,72 +405,71 @@ form .reset:hover{
   height: 150px;
   border-radius: 5px;
   padding: 1rem;
-  margin-top:1rem;
+  margin-top: 2rem;
   cursor: pointer;
 }
 #guardada .abrirNuevo h2,
-#guardada .abrirNuevo p{
-  margin-top: .5rem;
+#guardada .abrirNuevo p {
+  margin-top: 0.5rem;
   text-transform: capitalize;
   text-overflow: ellipsis;
   overflow: hidden;
   color: #666;
 }
-.abrirNuevo{
-  box-shadow: 1px 2px .2rem #666;
+.abrirNuevo {
+  box-shadow: 1px 2px 0.2rem #666;
   position: relative;
-
 }
-.abrirNuevo h2{
+.abrirNuevo h2 {
   color: white;
 }
-.abrirNuevo:hover{
+.abrirNuevo:hover {
   transform: scale(1.05);
 }
-.abrirNuevo:hover .editarBorrar{
+.abrirNuevo:hover .editarBorrar {
   display: initial;
 }
 
 /* FORMULARIO */
-#formulario .titulo{
+#formulario .titulo {
   display: flex;
   gap: 5rem;
   align-items: center;
 }
-#formulario .titulo span{
+#formulario .titulo span {
   font-size: 1.5rem;
   font-weight: 500;
 }
 
-input::placeholder{
-  font-size: 18px;  
+input::placeholder {
+  font-size: 18px;
 }
-textarea::placeholder{
+textarea::placeholder {
   font-size: 18px;
 }
 input::placeholder {
   text-transform: uppercase;
-  color:#000;
+  color: #000;
 }
 #formulario input {
-  padding: .2rem;
+  padding: 0.2rem;
   font-size: 2rem;
 }
 #formulario textarea {
-  padding: .2rem;
+  padding: 0.2rem;
   height: 350px;
   resize: none;
   outline: none;
   font-size: 1.5rem;
 }
 
-#formulario form{
+#formulario form {
   width: 50%;
   margin: 8rem auto;
 }
 
 /* PREGUNTAS FRECUENTES */
-.faq{
+.faq {
   color: #666;
 }
 .faq h2 {
@@ -468,7 +478,7 @@ input::placeholder {
   margin-bottom: 20px;
   margin-top: 11rem;
 }
-.faq li{
+.faq li {
   list-style-type: square;
 }
 .faq h3 {
@@ -481,47 +491,47 @@ input::placeholder {
 }
 
 /*FOOTER*/
-.footer{
+.footer {
   background: black;
-  text-align: center; 
-  padding:.8rem;
+  text-align: center;
+  padding: 0.8rem;
 }
 
-.footer h3{
+.footer h3 {
   color: #ffffff;
   font-size: 1rem;
 }
 
-.footer p{
+.footer p {
   color: #ffffff;
   font-size: 1rem;
 }
 
-.icon-footer{
+.icon-footer {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1rem;
   margin: 1rem 0;
 }
-.sigueme{
+.sigueme {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
   text-transform: capitalize;
   background-color: #fff;
-  border-radius:.5rem;
-  padding: .5rem;
-  gap: .5rem;
-  box-shadow: 0 0 .5rem #fff;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  gap: 0.5rem;
+  box-shadow: 0 0 0.5rem #fff;
 }
-.sigueme p{
+.sigueme p {
   color: black;
 }
 
-.fa-brands{
-  font-size: 1rem; 
+.fa-brands {
+  font-size: 1rem;
   width: 1.5rem;
   height: 1.5rem;
   display: flex;
@@ -530,23 +540,30 @@ input::placeholder {
   border-radius: 100%;
 }
 
-.fa-instagram{
-  background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
+.fa-instagram {
+  background: linear-gradient(
+    to top right,
+    #fcde30,
+    #e9712a,
+    #d2313b,
+    #ae4198,
+    #7540a1,
+    #5443a8
+  );
   color: #ffffff;
 }
 
-.fa-facebook{
-  background: #1E4595;
+.fa-facebook {
+  background: #1e4595;
   color: #ffffff;
 }
 
-.fa-facebook:hover{
+.fa-facebook:hover {
   background: #0655f3;
-  
 }
 
 .fa-twitter,
-.fa-github{
+.fa-github {
   background: linear-gradient(to right top, #42a9ec, #358de6);
   color: #ffffff;
 }
@@ -554,16 +571,15 @@ input::placeholder {
 .fa-twitter:hover,
 .fa-github:hover,
 .fa-facebook:hover,
-.fa-instagram:hover{
-  color:#000;
-
+.fa-instagram:hover {
+  color: #000;
 }
 
-@media(max-width:520px){
-  .icon-footer{
+@media (max-width: 520px) {
+  .icon-footer {
     width: 50%;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     margin: 1rem auto;
   }
 }
