--- a/views/preguntas.ejs
+++ b/views/preguntas.ejs
@@ -1,38 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head') %>
-<body>
- <%- include('./partials/header') %> 
-  <!-- como hacer un index -->
+  <%- include('./partials/head') %>
+  <body>
+    <%- include('./partials/header') %>
+    <!-- como hacer un index -->
 
     <div class="faq container">
       <div class="centro">
-          <a href="/" class="volver preguntas">
-              <i class="fas fa-home fa-2x"></i>
-          </a>
-          <h2>Preguntas Frecuentes</h2>
-          <h3>¿Cómo se usa el Bloc de Notas?</h3>
-          <p>El Bloc de Notas es una herramienta para guardar notas y textos de manera fácil y rápida. Para usarlo, sigue los siguientes pasos:</p>
-          <ol>
-            <li>Ingresa un título para tu nota en el campo de texto del formulario.</li>
-            <li>Escribe tu nota o texto en el área de texto debajo del título.</li>
-            <li>Haz clic en el botón "Guardar" para guardar tu nota en la lista de notas guardadas.</li>
-          </ol>
-          
-          <h3>¿Cómo puedo editar una nota guardada?</h3>
-          <p>Para editar una nota guardada, haz clic en el título de la nota que deseas editar en la lista de notas guardadas. Esto abrirá la nota en el formulario de edición. Aquí puedes hacer cualquier cambio que desees en el título o el cuerpo de la nota y guardarla de nuevo.</p>
-          
-          <h3>¿Cómo puedo borrar una nota guardada?</h3>
-          <p>Para borrar una nota guardada, haz clic en el botón "Eliminar" al lado del título de la nota que deseas borrar. Esto eliminará la nota de la lista de notas guardadas.</p>
-          
-          <h3>¿Cómo puedo cambiar el color, la fuente o el fondo de mi nota?</h3>
-          <p>Para cambiar el color, la fuente o el fondo de tu nota, haz clic en el botón "Editar" en la barra de navegación en la parte superior de la página y selecciona la opción correspondiente en el menú desplegable.</p>
-          
-          <h3>¿Cómo puedo obtener ayuda si tengo problemas con el Bloc de Notas?</h3>
-          <p>Si tienes algún problema con el Bloc de Notas, por favor contáctanos a través de la página de contacto en nuestra página web y haremos todo lo posible para ayudarte.</p>
+        <a href="/" class="volver">
+          <i class="fas fa-home fa-2x"></i>
+        </a>
+        <h2>Preguntas Frecuentes</h2>
+        <h3>¿Cómo se usa el Bloc de Notas?</h3>
+        <p>
+          El Bloc de Notas es una herramienta para guardar notas y textos de
+          manera fácil y rápida. Para usarlo, sigue los siguientes pasos:
+        </p>
+        <ol>
+          <li>
+            Ingresa un título para tu nota en el campo de texto del formulario.
+          </li>
+          <li>
+            Escribe tu nota o texto en el área de texto debajo del título.
+          </li>
+          <li>
+            Haz clic en el botón "Guardar" para guardar tu nota en la lista de
+            notas guardadas.
+          </li>
+        </ol>
 
-        </div>
-  </div>
-<%- include('./partials/footer') %>
-</body>
+        <h3>¿Cómo puedo editar una nota guardada?</h3>
+        <p>
+          Para editar una nota guardada, haz clic en el título de la nota que
+          deseas editar en la lista de notas guardadas. Esto abrirá la nota en
+          el formulario de edición. Aquí puedes hacer cualquier cambio que
+          desees en el título o el cuerpo de la nota y guardarla de nuevo.
+        </p>
+
+        <h3>¿Cómo puedo borrar una nota guardada?</h3>
+        <p>
+          Para borrar una nota guardada, haz clic en el botón "Eliminar" al lado
+          del título de la nota que deseas borrar. Esto eliminará la nota de la
+          lista de notas guardadas.
+        </p>
+
+        <h3>¿Cómo puedo cambiar el color, la fuente o el fondo de mi nota?</h3>
+        <p>
+          Para cambiar el color, la fuente o el fondo de tu nota, haz clic en el
+          botón "Editar" en la barra de navegación en la parte superior de la
+          página y selecciona la opción correspondiente en el menú desplegable.
+        </p>
+
+        <h3>
+          ¿Cómo puedo obtener ayuda si tengo problemas con el Bloc de Notas?
+        </h3>
+        <p>
+          Si tienes algún problema con el Bloc de Notas, por favor contáctanos a
+          través de la página de contacto en nuestra página web y haremos todo
+          lo posible para ayudarte.
+        </p>
+      </div>
+    </div>
+    <%- include('./partials/footer') %>
+  </body>
 </html>
